--- a/app/views/layouts/_header.html
+++ b/app/views/layouts/_header.html
@@ -1,19 +1,19 @@
-<header>
+<header class="border-bottom-0 border-left- border-right-0 border-success border">
 <nav class="navbar navbar-expand-md navbar-light bg-light">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" href="https://e-naturessunshine.com" id="logo"> <img src="https://health.naturessunshine.com/images/n-s-logo.svg" alt="Nature's Sunshine logo" style="width:303px;height:68px;border:0" class="img-responsive"></a>
 
-     
+
     <div class="collapse navbar-collapse" id="myNavbar">
-      
+
         <ul class="navbar-nav ml-auto">
           <li class="nav-item nav-link"><%= link_to "Przeładuj ankietę", ankieta_path %></li>
           <li class="nav-item nav-link"><%= link_to "Wróc do Nature's Sunshine", "https://e-naturessunshine.com" %></li>
 
         </ul>
-     
+
     </div>
 
   </nav>
