--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,6 @@
 <%= yield %>
 
   <%= $record.inspect if Rails.env.development? %>
-<%= console %>
+<%= console if Rails.env.development?%>
 </body>
 </html>
