--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
 <%= render 'layouts/header' %>
 <%= yield %>
 
+<%= render 'layouts/footer' %>
 
+<%= console if Rails.env.development? %>
 </body>
 </html>
