--- a/app/views/health_assessment/wynik.html.erb
+++ b/app/views/health_assessment/wynik.html.erb
@@ -18,7 +18,7 @@
   <div class="container border border-secondary m-1 p-2">
       <h2 class="text-success"> Energia i kompozycja ciała</h2>
       <p class="text-muted">Można podejrzewać, że twój poziom energii i kompozycji ciała jest...</p>
-      <h3 class="text-success"><%= wydaj_ocene($parametry[:sklad_ciala]) %></h3>
+      <h3 class="text-success"><%= wydaj_ocene($parametry[:energia]) %></h3>
       <%= image_tag("diagram-body_composition.png", :alt => "energia i kompozycja ciała", class: 'img-fluid') %>
      <a href="https://e-naturessunshine.com/shop/categories/1,0,suplementy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
   </div>
